# ParquetSQL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: chartmanager.h  chartwidget.h  duckdbmanager.h  filebrowser.h  filetabmanager.h  mainwindow.h  resultstablemodel.h  sqleditor.h  sqlexecutor.h
src/: chartmanager.cpp  chartwidget.cpp  duckdbmanager.cpp  filebrowser.cpp  filetabmanager.cpp  main.cpp  mainwindow.cpp  resultstablemodel.cpp  sqleditor.cpp  sqlexecutor.cpp
ui/: mainwindow.ui
